# MTCNN

./: .gitignore  CMakeLists.txt  LICENSE  MTCNN.sln  README.md  clean.bat  run.sh
Fast-MTCNN/: CMakeLists.txt  Fast-MTCNN.vcxproj  mtcnn_opencv.cpp
Fast-MTCNN/model/: det1_.caffemodel  det1_.prototxt
MTCNN-light/: CMakeLists.txt  MTCNN-light.vcxproj
MTCNN-light/src/: FaceInfo.h  main.cpp  mtcnn.cpp  mtcnn.h  network.cpp  network.h  pBox.cpp  pBox.h
caffe/: CMakeLists.txt  MTCNN.cpp  MTCNN.h  main.cpp  util.cpp  util.h
cpp/: CMakeLists.txt  MTCNN.cpp  MTCNN.h  main.cpp
model/caffe/: det1.prototxt  det2_input.prototxt  det3_input.prototxt
model/light/: Pnet.txt  Rnet.txt
model/pytorch/: onet_Weights  pnet_Weights  rnet_Weights
ncnn/: CMakeLists.txt  main.cpp  mtcnn.cpp  mtcnn.h  ncnn.vcxproj
python/: MtcnnDetector.py  Mtcnndnn.py  caffemodel2txt.py  demo.py
python-caffe/: MtcnnDetector.py  demo.py  pose.py  python.pyproj
pytorch/: demo.py
pytorch/utils/: util.py
tensorflow/: README.md  caffe2tf.py  demo.py  mtcnn.py  mtcnn_data.py  tf.pyproj
train/: MTCNN.py  MTCNN_Step_by_Step.ipynb  MTCNN_Training_Step_by_Step.ipynb  MTCNN_nets.py  README.md  Video.py  prune_log.txt  train_log.txt
train/data_preprocessing/: assemble_Onet_imglist.py  assemble_Pnet_imglist.py  assemble_Rnet_imglist.py  gen_Pnet_train_data.py  gen_landmark_48.py  get_Onet_train_data.py  get_Rnet_train_data.py  transform.py  wider_loader.py
train/data_set/: get_data.sh
train/train/: Data_Loading.py  Train_Onet.py  Train_Pnet.py  Train_Rnet.py
windows/: MTCNN.vcxproj  caffe.vcxproj  cpp.vcxproj
